style: oConvertUtils 使用 valueOf 替代装箱构造