@@ -187,7 +187,7 @@ public class oConvertUtils {
 		Integer[] result = new Integer[len];
 		try {
 			for (int i = 0; i < len; i++) {
-				result[i] = new Integer(object[i].trim());
+				result[i] = Integer.valueOf(object[i].trim());
 			}
 			return result;
 		} catch (NumberFormatException e) {
@@ -238,7 +238,7 @@ public class oConvertUtils {
 	}
 
 	public static long stringToLong(String str) {
-		Long test = new Long(0);
+		Long test = Long.valueOf(0);
 		try {
 			test = Long.valueOf(str);
 		} catch (Exception e) {
